Created Person Class and Person Test

--- a/PersonTest/Person.Test.csproj
+++ b/PersonTest/Person.Test.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E94DAB31-BFE1-4505-865A-B69CFA1D0A2D}</ProjectGuid>
+    <ProjectGuid>{81F28750-C4EA-4DA9-B732-3CD767EA1484}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TDD_Lab2</RootNamespace>
-    <AssemblyName>TDD_Lab2</AssemblyName>
+    <RootNamespace>PersonTest</RootNamespace>
+    <AssemblyName>PersonTest</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,7 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Person.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
